@@ -6,7 +6,7 @@ this repository contains the full copyright notices and license terms. -->
         <tree tree_state="1"/>
     </xpath>
     <xpath expr="/tree/field[@name='name']" position="before">
-        <field name="start_date"/>
+        <field name="start_date" icon="icon"/>
         <field name="end_date"/>
     </xpath>
     <xpath expr="/tree/field[@name='zip']" position="replace_attributes">
@@ -16,4 +16,8 @@ this repository contains the full copyright notices and license terms. -->
         <field name="city" tree_invisible="1"/>
     </xpath>
     <xpath expr="/tree/field[@name='name']" position="replace"/>
+    <xpath expr="/tree/field[@name='active']" position="before">
+        <field name="return_to_sender" tree_invisible="1"/>
+        <field name="color" tree_invisible="1"/>
+    </xpath>
 </data>
