@@ -1,3 +1,5 @@
+* FEA6130 Amélioration du sigle "REFLEX" en utilisant le champ actif/inactif sur les adresses
+
 Version 1.12 - 2017-04-28
 * FEA#0000 Fonctionnalité de fusion de tiers
 * FEA#0000 Ajout du champ "genre long"
